k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: banking
  labels:
    app: banking-microservices
